--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <link rel=“stylesheet” type=“text/css” href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     
     
